@@ -1,5 +1,8 @@
 # ChangeLog for Eschalon Savefile Editor
 
+   29 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
+   Cleaned up Item equality testing
+
    24 Jun 2010; CJ Kucera <pez@apocalyptech.com> :
    Book 2 Entities get drawn in map GUI
 
